--- a/public/styles.css
+++ b/public/styles.css
@@ -150,8 +150,52 @@ small {
   line-height: 68px;
 }
 
+.container--center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
+
 /********************************
-  5. Content
+  5. Buttons
+*********************************/
+.button {
+  outline: 0;
+  border: 0;
+  padding: 0.8em 2.4em 0.8em 2.4em;
+  border-radius: 5px;
+  font-size: 1em;
+  position: relative;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.button--spotify {
+  background-color: #1db954;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: inline-block;
+  margin: auto;
+}
+
+.button--spotify:hover {
+  background-color: #179443;
+  text-decoration: none;
+}
+
+/********************************
+  6. Content
 *********************************/
 .following {
   display: -webkit-box;
@@ -187,6 +231,7 @@ small {
 
 .feed__item {
   margin-bottom: 0.5em;
+  position: relative;
 }
 
 .feed__item:last-of-type {
@@ -233,14 +278,14 @@ small {
 }
 
 /********************************
-  6. Template specifick
+  7. Template specifick
 *********************************/
 .template__search {
   padding: 1em;
 }
 
 /********************************
-  7. Override
+  8. Override
 *********************************/
 .instagram-media {
   background-color: #fff !important;
@@ -253,5 +298,44 @@ small {
 .twitter-tweet {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
+}
+
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 44px;
+  width: 100vw;
+  left: 0;
+  height: 64px;
+  background-color: #fff;
+}
+
+.socials img {
+  max-height: 24px;
+  margin-right: 0.2em;
+}
+
+.socials span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=styles.css.map */
