--- a/public/styles.scss
+++ b/public/styles.scss
@@ -150,10 +150,46 @@ small {
   line-height: 68px;
 }
 
-/********************************
-  5. Content
-*********************************/
+.container--center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
 
+/********************************
+  5. Buttons
+*********************************/
+.button {
+  outline: 0;
+  border: 0;
+  padding: 0.8em 2.4em 0.8em 2.4em;
+  border-radius: 5px;
+  font-size: 1em;
+  position: relative;
+  cursor: pointer;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.button--spotify {
+  background-color: #1db954;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: inline-block;
+  margin: auto;
+}
+
+.button--spotify:hover {
+  background-color: #179443;
+  text-decoration: none;
+}
+
+/********************************
+  6. Content
+*********************************/
 .following {
   display: flex;
   padding: 0 1em;
@@ -184,6 +220,7 @@ small {
 
 .feed__item {
   margin-bottom: 0.5em;
+  position: relative;
 
   &:last-of-type {
     margin-bottom: 0;
@@ -228,7 +265,7 @@ small {
 }
 
 /********************************
-  6. Template specifick
+  7. Template specifick
 *********************************/
 
 .template__search {
@@ -236,7 +273,7 @@ small {
 }
 
 /********************************
-  7. Override
+  8. Override
 *********************************/
 
 .instagram-media {
@@ -250,4 +287,29 @@ small {
 .twitter-tweet {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 44px;
+  width: 100vw;
+  left: 0;
+  height: 64px;
+  background-color: $white;
+
+  img {
+    max-height: 24px;
+    margin-right: 0.2em;
+  }
+  
+  span {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    justify-content: center;
+  }
 }
