--- a/views/home.hbs
+++ b/views/home.hbs
@@ -129,8 +129,14 @@
               datetime="2018-04-15T16:22:56+00:00">15 Apr 2018 om 9:22 (PDT)</time></p>
         </div>
       </blockquote>
+      <div class="socials">
+        <span><img src="/images/star.png" alt="Star"> 100</span>
+        <span><img src="/images/speech-bubble.png" alt="Star"> 100</span>
+        <span><img src="/images/share.png" alt="Star"></span>
+        <span><img src="/images/bookmark.png" alt="Star"></span>
+      </div>
     </div>
-    <div class="feed__item">
+    {{!-- <div class="feed__item">
       <div class="feed__description">
         <img src="/images/kendrick-lamar-yt.jpg" alt="Kendrick Lamar" class="feed__avatar">
         <span class="feed__name">KendrickLamarVEVO</span>
@@ -140,17 +146,23 @@
         <iframe src="https://www.youtube.com/embed/tvTRZJ-4EyI?controls=0" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-    </div>
+    </div> --}}
     <div class="feed__item">
       <blockquote class="twitter-tweet" data-lang="nl">
-        <p lang="en" dir="ltr">Tune in now to NBC <a
-            href="https://twitter.com/hashtag/ChimeforChange?src=hash&amp;ref_src=twsrc%5Etfw">#ChimeforChange</a>
-          benefit concert. I am honored to be part of this great initiative for the empowerment of all women!</p>&mdash;
-        BEYONCÉ (@Beyonce) <a href="https://twitter.com/Beyonce/status/341358625639526401?ref_src=twsrc%5Etfw">3 juni
-          2013</a>
+        <p lang="en" dir="ltr"><a
+            href="https://twitter.com/hashtag/HOMECOMING?src=hash&amp;ref_src=twsrc%5Etfw">#HOMECOMING</a> out now. <a
+            href="https://t.co/sa6OKEBvkb">https://t.co/sa6OKEBvkb</a> <a
+            href="https://t.co/f7fNhYuzLc">pic.twitter.com/f7fNhYuzLc</a></p>&mdash; BEYONCÉ (@Beyonce) <a
+          href="https://twitter.com/Beyonce/status/1118413878596198400?ref_src=twsrc%5Etfw">17 april 2019</a>
       </blockquote>
+      <div class="socials" style="padding-top: 10px;">
+        <span><img src="/images/star.png" alt="Star"> 100</span>
+        <span><img src="/images/speech-bubble.png" alt="Star"> 100</span>
+        <span><img src="/images/share.png" alt="Star"> 100</span>
+        <span><img src="/images/bookmark.png" alt="Star"> 100</span>
+      </div>
     </div>
-    <div class="feed__item">
+    {{!-- <div class="feed__item">
       <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/252739311&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </div>
@@ -159,6 +171,6 @@
         src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeyonce%2Fposts%2F10161884794540601&width=500"
         width="500" height="595" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
         allowTransparency="true" allow="encrypted-media"></iframe>
-    </div>
+    </div> --}}
   </div>
 </main>
