--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -16,7 +16,7 @@
     {{{body}}}
     <footer class="navigation">
       <nav>
-        <a href="/" class="navigation__tab">
+        <a href="/home" class="navigation__tab">
           <img src="/images/home.png" alt="Home">
         </a>
         <a href="/search" class="navigation__tab">
