--- a/views/home.hbs
+++ b/views/home.hbs
@@ -43,9 +43,9 @@
 <main>
   <div class="feed">
     <div class="feed__item">
-      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BhmP-FClIds/"
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BwWS0E0nFyY/"
         data-instgrm-version="12">
-        <div style="padding:16px;"> <a href="https://www.instagram.com/p/BhmP-FClIds/"
+        <div style="padding:16px;"> <a href="https://www.instagram.com/p/BwWS0E0nFyY/"
             style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
             target="_blank">
             <div style=" display: flex; flex-direction: row; align-items: center;">
@@ -122,7 +122,7 @@
           </a>
           <p
             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
-            <a href="https://www.instagram.com/p/BhmP-FClIds/"
+            <a href="https://www.instagram.com/p/BwWS0E0nFyY/"
               style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
               target="_blank">Een bericht gedeeld door Beyoncé (@beyonce)</a> op <time
               style=" font-family:Arial,sans-serif; font-size:14px; line-height:17px;"
@@ -162,6 +162,16 @@
         <span><img src="/images/bookmark.png" alt="Star"> 100</span>
       </div>
     </div>
+    {{!-- <div class="feed__item">
+      <iframe
+        src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeyonce%2Fposts%2F10161884794540601&width=500"
+        width="500" height="595" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+        allowTransparency="true" allow="encrypted-media"></iframe>
+    </div> --}}
+    {{!-- <div class="feed__item">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/AKcpxwH5f6o" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div> --}}
     {{!-- <div class="feed__item">
       <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/252739311&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
