--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,3 +1,5 @@
 <h1>Search</h1>
 
-<input type="text" placeholder="Search for artist...">
+<form id="searchSongs" action="">
+  <input type="text" id="numberSearch" placeholder="Search for a song"><button class="button--form">Search</button>
+</form>
