--- a/public/styles.scss
+++ b/public/styles.scss
@@ -15,13 +15,15 @@ $red: #e74c3c;
 $blue: #2c3e50;
 $purple: #330037;
 
-$header-gradient: linear-gradient(to bottom, $purple, $black 36%);
+$header-gradient: linear-gradient(0deg, rgba(40,40,40,1) 10%, rgba(51,0,55,1) 100%);
+$body-gradient: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(40,40,40,1) 90%);
+
 
 /* Fonts */
 $font-nt-sans: "Nunito Sans", sans-serif;
 
 /* Style */
-$border-radius: 5px;
+$border-radius: 10px;
 $rounded: 50%;
 
 /********************************
@@ -48,11 +50,11 @@ body {
   font-size: 1em;
   line-height: 1.1;
   color: $black;
-  background-color: $black;
+  background: $body-gradient;
+  min-height: 100vh;
 }
 
 main {
-  background-color: $gray-light;
   margin-bottom: 57px;
 }
 
@@ -120,7 +122,7 @@ small {
 
 .header {
   background-image: $header-gradient;
-  padding: 3em 0 1em 0;
+  padding: 3em 0 3em 0;
   color: $white;
 }
 
@@ -133,6 +135,7 @@ small {
 .navigation {
   text-align: center;
   position: fixed;
+  z-index: 2;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -218,14 +221,58 @@ small {
   height: 98px;
 }
 
+.feed {
+  margin-top: -2em;
+  padding: 1em;
+}
+
 .feed__item {
-  margin-bottom: 0.5em;
+  background-color: #fff;
+  margin-bottom: 1.5em;
   position: relative;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 10px!important;
 
   &:last-of-type {
     margin-bottom: 0;
   }
 }
+
+.feed__item--facebook {
+  background-color: #fff;
+
+  .fb-post {
+    margin-top: -1px;
+    margin-left: -1px;
+    width: calc(100% + 1px) !important;
+  }
+
+  .fb_iframe_widget_fluid span {
+    width: 100% !important;
+  }
+
+  iframe {
+    width: auto !important;
+  }
+}
+
+.feed__item--youtube {
+	position: relative;
+	padding-bottom: 56.25%;
+  height: 0;
+  border-radius: 10px;
+  background-color: transparent;
+  
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 
 .feed__description {
   overflow: auto;
@@ -249,21 +296,6 @@ small {
   display: flex;
 }
 
-.feed__video {
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 25px;
-	height: 0;
-}
-
-.feed__video iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
 /********************************
   7. Template specifick
 *********************************/
@@ -278,8 +310,6 @@ small {
 
 .instagram-media {
   background-color: $white !important;
-  border-radius: 0 !important;
-  border: 0 !important;
   width: 100% !important;
   margin: 0 !important;
 }
