--- a/views/home.hbs
+++ b/views/home.hbs
@@ -42,7 +42,7 @@
 
 <main>
   <div class="feed">
-    <div class="feed__item">
+    <div class="feed__item feed__item--instagram">
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BwWS0E0nFyY/"
         data-instgrm-version="12">
         <div style="padding:16px;"> <a href="https://www.instagram.com/p/BwWS0E0nFyY/"
@@ -129,25 +129,8 @@
               datetime="2018-04-15T16:22:56+00:00">15 Apr 2018 om 9:22 (PDT)</time></p>
         </div>
       </blockquote>
-      <div class="socials">
-        <span><img src="/images/star.png" alt="Star"> 100</span>
-        <span><img src="/images/speech-bubble.png" alt="Star"> 100</span>
-        <span><img src="/images/share.png" alt="Star"></span>
-        <span><img src="/images/bookmark.png" alt="Star"></span>
-      </div>
     </div>
-    {{!-- <div class="feed__item">
-      <div class="feed__description">
-        <img src="/images/kendrick-lamar-yt.jpg" alt="Kendrick Lamar" class="feed__avatar">
-        <span class="feed__name">KendrickLamarVEVO</span>
-        <small class="feed__metadata">2 years ago &#183; 24.1999.625 views</small>
-      </div>
-      <div class="feed__video">
-        <iframe src="https://www.youtube.com/embed/tvTRZJ-4EyI?controls=0" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-    </div> --}}
-    <div class="feed__item">
+    <div class="feed__item feed__item--twitter">
       <blockquote class="twitter-tweet" data-lang="nl">
         <p lang="en" dir="ltr"><a
             href="https://twitter.com/hashtag/HOMECOMING?src=hash&amp;ref_src=twsrc%5Etfw">#HOMECOMING</a> out now. <a
@@ -155,32 +138,14 @@
             href="https://t.co/f7fNhYuzLc">pic.twitter.com/f7fNhYuzLc</a></p>&mdash; BEYONCÉ (@Beyonce) <a
           href="https://twitter.com/Beyonce/status/1118413878596198400?ref_src=twsrc%5Etfw">17 april 2019</a>
       </blockquote>
-      <div class="socials" style="padding-top: 10px;">
-        <span><img src="/images/star.png" alt="Star"> 100</span>
-        <span><img src="/images/speech-bubble.png" alt="Star"> 100</span>
-        <span><img src="/images/share.png" alt="Star"> 100</span>
-        <span><img src="/images/bookmark.png" alt="Star"> 100</span>
-      </div>
     </div>
-    {{!-- <div class="feed__item">
-      <iframe
-        src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeyonce%2Fposts%2F10161884794540601&width=500"
-        width="500" height="595" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowTransparency="true" allow="encrypted-media"></iframe>
-    </div> --}}
-    {{!-- <div class="feed__item">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/AKcpxwH5f6o" frameborder="0"
+    <div class="feed__item feed__item--facebook">
+      <div class="fb-post"
+        data-href="https://www.facebook.com/beyonce/photos/a.252225550600/10161884777280601/?type=3&theater"></div>
+    </div>
+    <div class="feed__item feed__item--youtube">
+      <iframe width="100%" height="auto" src="https://www.youtube.com/embed/AKcpxwH5f6o" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div> --}}
-    {{!-- <div class="feed__item">
-      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/252739311&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </div>
-    <div class="feed__item">
-      <iframe
-        src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeyonce%2Fposts%2F10161884794540601&width=500"
-        width="500" height="595" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowTransparency="true" allow="encrypted-media"></iframe>
-    </div> --}}
   </div>
 </main>
