--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -27,8 +27,11 @@
         </a>
       </nav>
     </footer>
+    <div id="fb-root"></div>
     <script async src="//www.instagram.com/embed.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script async defer crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3&appId=561819877300981&autoLogAppEvents=1"></script>
     <script defer src="/main.js"></script>
   </body>
 
