--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,5 +1,5 @@
 <h1>Search</h1>
 
-<form id="searchSongs" action="">
-  <input type="text" id="numberSearch" placeholder="Search for a song"><button class="button--form">Search</button>
+<form id="searchArtist">
+  <input type="text" name="artist" placeholder="Search artist...">
 </form>
