--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,5 +1,5 @@
 <h1>Search</h1>
 
-<form id="searchArtist">
-  <input type="text" name="artist" placeholder="Search artist...">
-</form>
+<input class="searchArtist" type="text" name="artist" placeholder="Search artist...">
+
+<ul class="artists"></ul>
