--- a/public/styles.css
+++ b/public/styles.css
@@ -173,7 +173,7 @@ small {
   outline: 0;
   border: 0;
   padding: 0.8em 2.4em 0.8em 2.4em;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 1em;
   position: relative;
   cursor: pointer;
@@ -305,6 +305,48 @@ small {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.artists {
+  margin-top: 1em;
+  margin-bottom: 57px;
+}
+
+.artist {
+  padding: 0.5em;
+}
+
+.artist:last-of-type {
+  margin-bottom: 0;
+}
+
+.artist:hover {
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+}
+
+.artist__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+}
+
+.artist__link:hover {
+  text-decoration: none;
+}
+
+.artist__image {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.artist__name {
+  margin-left: 0.5em;
 }
 
 /********************************
