--- a/public/styles.css
+++ b/public/styles.css
@@ -29,8 +29,7 @@ body {
   font-size: 1em;
   line-height: 1.1;
   color: #171717;
-  background: -webkit-gradient(linear, left bottom, left top, from(black), color-stop(90%, #282828));
-  background: linear-gradient(0deg, black 0%, #282828 90%);
+  background: #171717;
   min-height: 100vh;
 }
 
@@ -264,7 +263,7 @@ small {
 }
 
 .feed__item--facebook iframe {
-  width: auto !important;
+  width: 100% !important;
 }
 
 .feed__item--youtube {
@@ -352,6 +351,11 @@ small {
 /********************************
   7. Template specifick
 *********************************/
+.template__home {
+  background: -webkit-gradient(linear, left bottom, left top, from(black), color-stop(90%, #282828));
+  background: linear-gradient(0deg, black 0%, #282828 90%);
+}
+
 .template__search {
   padding: 1em;
 }
@@ -407,5 +411,76 @@ small {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+/********************************
+  9. Carousel
+*********************************/
+.swiper-container {
+  width: 100%;
+  height: 420px;
+  text-align: center;
+  color: #fff;
+}
+
+.carousel__image--wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.carousel__image {
+  width: 100%;
+  max-height: 350px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.carousel__gradient {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  height: 350px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(90%, #171717));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #171717 90%);
+}
+
+.carousel__name {
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
+  font-size: 3.5em;
+}
+
+.carousel__button {
+  position: relative;
+  z-index: 1;
+  border-radius: 500px;
+  background: transparent;
+  border: 1px solid #bebebe;
+  color: #fff;
+  padding: 0.3em 1em;
+  text-transform: uppercase;
+  margin-top: -10px;
+}
+
+.swiper-pagination-bullet {
+  background-color: #171717;
+  border: 1px solid #fff;
+  opacity: 1;
+  width: 10px;
+  height: 10px;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #fff;
+}
+
+.dark-slide {
+  opacity: 0.87;
+  background-color: #171717;
 }
 /*# sourceMappingURL=styles.css.map */
