--- a/public/styles.scss
+++ b/public/styles.scss
@@ -49,7 +49,7 @@ body {
   font-size: 1em;
   line-height: 1.1;
   color: $black;
-  background: $body-gradient;
+  background: $black;
   min-height: 100vh;
 }
 
@@ -252,7 +252,7 @@ small {
   }
 
   iframe {
-    width: auto !important;
+    width: 100% !important;
   }
 }
 
@@ -337,6 +337,10 @@ small {
   7. Template specifick
 *********************************/
 
+.template__home {
+  background: $body-gradient;
+}
+
 .template__search {
   padding: 1em;
 }
@@ -379,4 +383,74 @@ small {
     flex: 1;
     justify-content: center;
   }
+}
+
+/********************************
+  9. Carousel
+*********************************/
+
+.swiper-container {
+  width: 100%;
+  height: 420px;
+  text-align: center;
+  color: $white;
+}
+
+.carousel__image--wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.carousel__image {
+  width: 100%;
+  max-height: 350px;
+  object-fit: cover;
+}
+
+.carousel__gradient {
+  position:absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  height: 350px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(23,23,23, 1) 90%);
+}
+
+.carousel__name {
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
+  font-size: 3.5em;
+}
+
+.carousel__button {
+  position: relative;
+  z-index: 1;
+  border-radius: 500px;
+  background: transparent;
+  border: 1px solid $gray;
+  color: $white;
+  padding: 0.3em 1em;
+  text-transform: uppercase;
+  margin-top: -10px;
+}
+
+.swiper-pagination-bullet {
+  background-color: $black;
+  border: 1px solid $white;
+  opacity: 1;
+  width: 10px;
+  height: 10px;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: $white;
+}
+
+.dark-slide {
+  opacity: 0.87;
+  background-color: $black;
 }
