--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
@@ -8,6 +8,7 @@
     <meta name="description"
       content="Linernote wil Spotify, Youtube en Social Media content van artiesten samenbrengen in één app, aangevuld door concertkaartjes">
     <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="stylesheet" href="/swiper.min.css">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900">
   </head>
@@ -27,12 +28,7 @@
         </a>
       </nav>
     </footer>
-    <div id="fb-root"></div>
-    <script async src="//www.instagram.com/embed.js"></script>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script async defer crossorigin="anonymous"
-      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3&appId=561819877300981&autoLogAppEvents=1"></script>
-    <script defer src="/main.js"></script>
+    {{{_sections.script}}}
   </body>
 
 </html>
