--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <header class="header">
-  <span class="header__title">Following</span>
+  <strong class="header__title">Following</strong>
   <nav class="following">
     <a href="#" class="following__link">
       <img src="/images/bruno-mars.png" alt="Bruno Mars" class="following__image">
@@ -41,6 +41,10 @@
 </header>
 
 <main>
+  <div class="feed__header--wrapper">
+    <strong class="feed__header--title">Most recent</strong>
+    <img class="feed__header--more" src="/images/more.svg" alt="more">
+  </div>
   <div class="feed">
     <div class="feed__item feed__item--instagram">
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BwWS0E0nFyY/"
