--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -8,8 +8,8 @@
     <meta name="description"
       content="Linernote wil Spotify, Youtube en Social Media content van artiesten samenbrengen in één app, aangevuld door concertkaartjes">
     <link rel="icon" type="image/png" href="/images/favicon.png">
-    <link rel="stylesheet" href="/swiper.min.css">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/css/swiper.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900">
   </head>
 
