Working database (needs unique sessions)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -231,11 +231,8 @@ small {
   text-decoration: none;
 }
 
+.related__image,
 .following__image {
-  height: 98px;
-}
-
-.related__image {
   height: 80px;
   width: 80px;
   -o-object-fit: cover;
