Most recent instagram and twitter post

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -403,6 +403,7 @@ small {
   background-color: #fff !important;
   width: 100% !important;
   margin: 0 !important;
+  border: 0 !important;
 }
 
 .twitter-tweet {
