--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -386,6 +386,7 @@ small {
   background-color: $white !important;
   width: 100% !important;
   margin: 0 !important;
+  border: 0 !important;
 }
 
 .twitter-tweet {
