--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,7 @@
     {{#following}}
     <a href="/artist/{{id}}" class="following__link">
       <img src="{{image}}" alt="{{name}}" class="following__image">
+      <span class="following__name">{{name}}</span>
     </a>
     {{/following}}
   </nav>
