--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -213,8 +213,11 @@ small {
 
 .following__link,
 .related__link {
-  margin-right: 0.5em;
+  margin-right: 0.7em;
   flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &:hover {
     text-decoration: none;
@@ -227,6 +230,12 @@ small {
   width: 80px;
   object-fit: cover;
   border-radius: $rounded;
+}
+
+.following__name,
+.related__name {
+  color: $white;
+  margin-top: 0.45em;
 }
 
 .feed__header--wrapper {
