--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,6 +1,6 @@
-<h1>Search</h1>
+<h1 class="header__title">Search</h1>
 
-<input class="searchArtist" type="text" name="artist" placeholder="Search artist...">
+<input class="searchArtist" type="text" name="artist" placeholder="Search...">
 
 <ul class="artists"></ul>
 
