--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -14,11 +14,14 @@ $green-dark: #179443;
 $brown: #a0522d;
 $red: #e74c3c;
 $blue: #2c3e50;
-$purple: #330037;
+$purple: #7f6cff;
+$purple-dark: #330037;
 
 $header-gradient: linear-gradient(0deg, rgba(40,40,40,1) 10%, rgba(51,0,55,1) 100%);
 $body-gradient: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(40,40,40,1) 90%);
 $carousel-gradient: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(23,23,23,1) 90%);
+
+$ticketmaster: #009CDE;
 
 /* Fonts */
 $font-nt-sans: "Nunito Sans", sans-serif;
@@ -49,6 +52,7 @@ html {
 body {
   font-family: $font-nt-sans;
   font-size: 1em;
+  font-weight: 300;
   line-height: 1.1;
   color: $black;
   background: $black;
@@ -70,7 +74,7 @@ input {
   font-size: 1.125rem;
   border: 0;
   border-radius: 500px;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1em;
   width: 100%;
 
   &::placeholder {
@@ -104,7 +108,6 @@ p {
 a { 
   color: $gray;
   cursor: pointer;
-  font-weight: bold;
   text-decoration: none;
 
   &:hover {
@@ -122,16 +125,17 @@ small {
 *********************************/
 
 .header {
-  background-image: $header-gradient;
+  // background-image: $header-gradient;
   padding: 3em 0 3em 0;
   color: $white;
 }
 
 .header__title {
   display: block;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   padding: 0 1em;
   color: $white;
+  text-align: center;
 }
 
 .navigation {
@@ -218,6 +222,7 @@ small {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 86px;
 
   &:hover {
     text-decoration: none;
@@ -226,16 +231,46 @@ small {
 
 .related__image,
 .following__image {
-  height: 80px;
-  width: 80px;
+  height: 86px;
+  width: 86px;
   object-fit: cover;
   border-radius: $rounded;
+}
+
+.following__image {
+  border: 2px solid $purple;
+}
+
+.related__image {
+  border: 2px solid transparent;
 }
 
 .following__name,
 .related__name {
   color: $white;
   margin-top: 0.45em;
+  text-align: center;
+}
+
+.following__none {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: auto;
+}
+
+.following__search {
+  border-radius: $rounded;
+  background-color: $gray-dark;
+  height: 86px;
+  width: 86px;
+  display: flex;
+  justify-content: center;
+
+  .following__add {
+    height: 22px;
+    align-self: center;
+  }
 }
 
 .feed__header--wrapper {
@@ -267,6 +302,10 @@ small {
 
   &:last-of-type {
     margin-bottom: 0;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    color: $black;
   }
 }
 
@@ -301,6 +340,95 @@ small {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+.article__logo {
+  max-height: 54px;
+  text-align: center;
+  padding: 8px;
+
+  &--image {
+    max-height: 38px;
+  }
+}
+
+.article__title {
+  font-weight: 900;
+  font-size: 1.52rem;
+  margin-bottom: 1em;
+}
+
+.article__description {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  line-height: 1.5;
+}
+ 
+.article__link {
+  margin-bottom: 0.5em;
+  display: block;
+}
+
+.article__author {
+  display: block;
+  margin-bottom: 4px;
+  font-weight: 900;
+}
+
+.article__meta {
+  padding: 1em;
+
+  small {
+    color: $black;
+  }
+}
+
+.ticketmaster {
+  &__logo {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+
+    &--image {
+      height: 30px;
+      width: 30px;
+      border-radius: $rounded;
+    }
+
+    &--main {
+      height: 12px;
+      margin-left: auto;
+    }
+  }
+
+  &__name {
+    text-transform: lowercase;
+    margin-left: 0.5em;
+    font-weight: 700;
+
+    &:first-letter {
+      text-transform: uppercase;
+    }
+  }
+
+  &__image {
+    width: 100%;
+  }
+
+  &__link {
+    display: flex;
+    height: 50px;
+    padding: 10px;
+    margin-top: -4px;
+    align-items: center;
+    background-color: $ticketmaster;
+    color: $white;
+    font-weight: 700;
+
+    &--arrow {
+      margin-left: auto;
+    }
   }
 }
 
@@ -370,7 +498,7 @@ small {
 *********************************/
 
 .template__home {
-  background: $body-gradient;
+  // background: $body-gradient;
 
   main {
     margin-top: -25px;
@@ -379,11 +507,17 @@ small {
 
 .template__search {
   padding: 1em;
+
+  .header__title {
+    margin-top: 1em;
+    margin-bottom: 0.75em;
+  }
 }
 
 .template__artist {
+
   main {
-    margin-top: 20px;
+    margin-top: 15px;
   }
 }
 
@@ -426,6 +560,10 @@ small {
     flex: 1;
     justify-content: center;
   }
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 2px;
 }
 
 /********************************
@@ -496,14 +634,21 @@ small {
   padding: 0.3em 1em;
   text-transform: uppercase;
   margin-top: -10px;
+  cursor: pointer;
+  transition: 0.5s;
+
+  &--clicked {
+    background: $purple;
+    border: 1px solid $purple;
+    transition: 0.5s;
+  }
 }
 
 .swiper-pagination-bullet {
-  background-color: $black;
-  border: 1px solid $white;
+  background-color: $black-light;
   opacity: 1;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
 }
 
 .swiper-pagination-bullet-active {
@@ -552,14 +697,10 @@ small {
   text-transform: uppercase;
   text-align: center;
   display: block;
-}
-
-.carousel__track--button {
-  color: $green;
+  color: #848484;
 }
 
 .carousel__description--button {
-  color: #848484;
   margin-top: 26px;
 }
 
