--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,30 @@
 *********************************/
 /* Colors */
 /* Fonts */
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("/fonts/FoundersGroteskRegular.eot");
+  src: url("/fonts/FoundersGroteskRegular.eot?#iefix") format("embedded-opentype"), url("/fonts/FoundersGroteskRegular.woff2") format("woff2"), url("/fonts/FoundersGroteskRegular.woff") format("woff"), url("/fonts/FoundersGroteskRegular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("/fonts/FoundersGroteskMedium.eot");
+  src: url("/fonts/FoundersGroteskMedium.eot?#iefix") format("embedded-opentype"), url("/fonts/FoundersGroteskMedium.woff2") format("woff2"), url("/fonts/FoundersGroteskMedium.woff") format("woff"), url("/fonts/FoundersGroteskMedium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("/fonts/FoundersGroteskSemibold.eot");
+  src: url("/fonts/FoundersGroteskSemibold.eot?#iefix") format("embedded-opentype"), url("/fonts/FoundersGroteskSemibold.woff2") format("woff2"), url("/fonts/FoundersGroteskSemibold.woff") format("woff"), url("/fonts/FoundersGroteskSemibold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 /* Style */
 /********************************
   2. Base 
@@ -25,13 +49,14 @@ html {
 }
 
 body {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Founders Grotesk", sans-serif;
   font-size: 1em;
   font-weight: 300;
   line-height: 1.1;
   color: #171717;
   background: #171717;
   min-height: 100vh;
+  letter-spacing: 0.22px;
 }
 
 main {
@@ -81,7 +106,7 @@ img {
   3. Typography   
 *********************************/
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Founders Grotesk", sans-serif;
   margin-bottom: 0.5em;
   line-height: 1.3em;
   color: #fff;
@@ -120,10 +145,12 @@ small {
 
 .header__title {
   display: block;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   padding: 0 1em;
   color: #fff;
   text-align: center;
+  font-weight: 500;
+  font-size: 1.25rem;
 }
 
 .navigation {
@@ -263,6 +290,7 @@ small {
   color: #fff;
   margin-top: 0.45em;
   text-align: center;
+  font-size: 0.875em;
 }
 
 .following__none {
@@ -357,8 +385,8 @@ small {
 
 .feed__item--youtube {
   position: relative;
-  padding-bottom: 56.25%;
   height: 0;
+  height: 100%;
   border-radius: 10px;
   background-color: transparent;
 }
@@ -371,18 +399,23 @@ small {
   height: 100%;
 }
 
+.feed__ratio--wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+}
+
 .article__logo {
-  max-height: 54px;
-  text-align: center;
-  padding: 8px;
+  max-height: 50px;
+  padding: 14px;
+  background-color: #fff;
 }
 
 .article__logo--image {
-  max-height: 38px;
+  max-height: 22px;
 }
 
 .article__title {
-  font-weight: 900;
+  font-weight: 700;
   font-size: 1.52rem;
   margin-bottom: 1em;
 }
@@ -401,7 +434,7 @@ small {
 .article__author {
   display: block;
   margin-bottom: 4px;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .article__meta {
@@ -430,7 +463,7 @@ small {
 
 .ticketmaster__logo--main {
   height: 12px;
-  margin-left: auto;
+  margin-left: 0.5em;
 }
 
 .ticketmaster__name {
@@ -667,9 +700,9 @@ small {
 .carousel__name {
   position: relative;
   z-index: 1;
-  text-transform: uppercase;
   font-size: 3.5em;
   width: 100%;
+  font-weight: 500;
 }
 
 .carousel__button {
