--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -24,7 +24,41 @@ $carousel-gradient: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(23,23,23,1
 $ticketmaster: #009CDE;
 
 /* Fonts */
-$font-nt-sans: "Nunito Sans", sans-serif;
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url('/fonts/FoundersGroteskRegular.eot');
+  src: url('/fonts/FoundersGroteskRegular.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/FoundersGroteskRegular.woff2') format('woff2'),
+      url('/fonts/FoundersGroteskRegular.woff') format('woff'),
+      url('/fonts/FoundersGroteskRegular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url('/fonts/FoundersGroteskMedium.eot');
+  src: url('/fonts/FoundersGroteskMedium.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/FoundersGroteskMedium.woff2') format('woff2'),
+      url('/fonts/FoundersGroteskMedium.woff') format('woff'),
+      url('/fonts/FoundersGroteskMedium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url('/fonts/FoundersGroteskSemibold.eot');
+  src: url('/fonts/FoundersGroteskSemibold.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/FoundersGroteskSemibold.woff2') format('woff2'),
+      url('/fonts/FoundersGroteskSemibold.woff') format('woff'),
+      url('/fonts/FoundersGroteskSemibold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+$font-family: "Founders Grotesk", sans-serif;
+
 
 /* Style */
 $border-radius: 10px;
@@ -50,13 +84,14 @@ html {
 }
 
 body {
-  font-family: $font-nt-sans;
+  font-family: $font-family;
   font-size: 1em;
   font-weight: 300;
   line-height: 1.1;
   color: $black;
   background: $black;
   min-height: 100vh;
+  letter-spacing: 0.22px;
 }
 
 main {
@@ -91,7 +126,7 @@ img {
   3. Typography   
 *********************************/
 h1, h2, h3, h4, h5, h6 {
-  font-family: $font-nt-sans;
+  font-family: $font-family;
   margin-bottom: 0.5em;
   line-height: 1.3em;
   color: $white;
@@ -132,10 +167,12 @@ small {
 
 .header__title {
   display: block;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   padding: 0 1em;
   color: $white;
   text-align: center;
+  font-weight: 500;
+  font-size: 1.25rem;
 }
 
 .navigation {
@@ -250,6 +287,7 @@ small {
   color: $white;
   margin-top: 0.45em;
   text-align: center;
+  font-size: 0.875em;
 }
 
 .following__none {
@@ -329,8 +367,8 @@ small {
 
 .feed__item--youtube {
 	position: relative;
-	padding-bottom: 56.25%;
   height: 0;
+  height: 100%;
   border-radius: $border-radius;
   background-color: transparent;
   
@@ -343,18 +381,23 @@ small {
   }
 }
 
+.feed__ratio--wrapper {
+  position: relative;
+	padding-bottom: 56.25%;
+}
+
 .article__logo {
-  max-height: 54px;
-  text-align: center;
-  padding: 8px;
+  max-height: 50px;
+  padding: 14px;
+  background-color: $white;
 
   &--image {
-    max-height: 38px;
+    max-height: 22px;
   }
 }
 
 .article__title {
-  font-weight: 900;
+  font-weight: 700;
   font-size: 1.52rem;
   margin-bottom: 1em;
 }
@@ -373,7 +416,7 @@ small {
 .article__author {
   display: block;
   margin-bottom: 4px;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .article__meta {
@@ -398,7 +441,7 @@ small {
 
     &--main {
       height: 12px;
-      margin-left: auto;
+      margin-left: 0.5em;
     }
   }
 
@@ -619,9 +662,9 @@ small {
 .carousel__name {
   position: relative;
   z-index: 1;
-  text-transform: uppercase;
   font-size: 3.5em;
   width: 100%;
+  font-weight: 500;
 }
 
 .carousel__button {
